# Taller1_MartinRojas

./: CMakeLists.txt  LINK YOUTUBE.txt  main.cpp  video 2 explicacion codigo.txt
Colecciones/: Canciones.cpp  Canciones.h  Playlist.cpp  Playlist.h  Usuario.cpp  Usuario.h  Usuarios.cpp  Usuarios.h
Estructuras/: ListaSimpleCancion.cpp  ListaSimpleCancion.h  NodoCancion.cpp  NodoCancion.h
